; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zio.c_zio_walk_parents.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zio.c_zio_walk_parents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }
%struct.TYPE_10__ = type { %struct.TYPE_9__*, %struct.TYPE_9__* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_9__* @zio_walk_parents(%struct.TYPE_9__* %0, %struct.TYPE_10__** %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca %struct.TYPE_10__**, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %4, align 8
  store %struct.TYPE_10__** %1, %struct.TYPE_10__*** %5, align 8
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  store i32* %8, i32** %6, align 8
  %9 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %11 = icmp eq %struct.TYPE_10__* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32*, i32** %6, align 8
  %14 = call %struct.TYPE_10__* @list_head(i32* %13)
  br label %20

15:                                               ; preds = %2
  %16 = load i32*, i32** %6, align 8
  %17 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %17, align 8
  %19 = call %struct.TYPE_10__* @list_next(i32* %16, %struct.TYPE_10__* %18)
  br label %20

20:                                               ; preds = %15, %12
  %21 = phi %struct.TYPE_10__* [ %14, %12 ], [ %19, %15 ]
  %22 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  store %struct.TYPE_10__* %21, %struct.TYPE_10__** %22, align 8
  %23 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %23, align 8
  %25 = icmp eq %struct.TYPE_10__* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %20
  store %struct.TYPE_9__* null, %struct.TYPE_9__** %3, align 8
  br label %40

27:                                               ; preds = %20
  %28 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %29, i32 0, i32 1
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %30, align 8
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %33 = icmp eq %struct.TYPE_9__* %31, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @ASSERT(i32 %34)
  %36 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 0
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %38, align 8
  store %struct.TYPE_9__* %39, %struct.TYPE_9__** %3, align 8
  br label %40

40:                                               ; preds = %27, %26
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  ret %struct.TYPE_9__* %41
}

declare dso_local %struct.TYPE_10__* @list_head(i32*) #1

declare dso_local %struct.TYPE_10__* @list_next(i32*, %struct.TYPE_10__*) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
